<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/file_upload_header">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/pref_upload_type_entries"
            app:entryValues="@array/pref_upload_type_values"
            app:key="@string/key_upload"
            app:summary="@string/summary_upload_type"
            app:title="@string/summary_upload_type"
            app:icon="@android:drawable/ic_menu_upload" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/file_quality">

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/pref_upload_quality_entries"
            app:entryValues="@array/pref_upload_quality_values"
            app:key="@string/key_quality"
            app:icon="@android:drawable/ic_menu_gallery"
            app:summary="@string/summary_upload_video_quality"
            app:title="@string/title_upload_quality" />

    </PreferenceCategory>

</PreferenceScreen>