<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/file_quality" />

    <com.smartvid.settingsapplication.view.CustomRadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/option_full"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/resolution_full"/>

        <RadioButton
            android:id="@+id/option_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/resolution_high"/>

        <RadioButton
            android:id="@+id/option_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolution_medium"
            android:onClick="onClick"/>
    </com.smartvid.settingsapplication.view.CustomRadioGroup>
</LinearLayout>